tests/parser/tests/cases/should_fail/double_colon_in_map_literal/case.hash
k := {1::2};
