tests/parser/tests/cases/should_fail/double_colon_in_map_literal/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:9
1 |   k := {1::2};
  |           ^ here
  = note: Expected an expression, however received a `:`.
